--- a/About.Rmd
+++ b/About.Rmd
@@ -36,5 +36,5 @@ The N-Gram result was already summarized from Task02 Project based on collection
 **Below are the link toward documentations :**
 
 1.  Github, https://github.com/mrgito/Swiftkey-Capstone-Project
-2.  Rpub, <https://rpubs.com/Masculin/SwiftkeyCapstone>
-3.  Shiny, [https://masculin.shinyapps.io/SwiftkeyCapstone/](https://masculin.shinyapps.io/ShinyApp_Reproducible_Project/){.uri}
+2.  Rpub, https://rpubs.com/Masculin/SwiftkeyCapstone
+3.  Shiny, https://masculin.shinyapps.io/SwiftkeyCapstone
